[gd_scene load_steps=3 format=3 uid="uid://62v672g11cu"]

[ext_resource type="Script" path="res://scenes/opponent_meatball.gd" id="1_urw16"]
[ext_resource type="PackedScene" uid="uid://dg6mipn6t7m8s" path="res://scenes/meatball.tscn" id="2_k2abt"]

[node name="OpponentMeatball" type="Node3D"]
script = ExtResource("1_urw16")

[node name="Meatball" parent="." instance=ExtResource("2_k2abt")]

[node name="RetargetTimer" type="Timer" parent="."]
autostart = true

[node name="JumpTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="RetargetTimer" to="." method="_on_retarget_timer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
